Bug fixed: If you haven't made any knoteup for the current day yet, there's no share button in the top container when you scroll down to previous days. & z-index error

--- a/webapp/client/stylesheets/knote.import.styl
+++ b/webapp/client/stylesheets/knote.import.styl
@@ -305,7 +305,7 @@ html
         min-height: 15px
         line-height: 15px
         position: relative
-        z-index: 100
+        z-index: 10
         .edit-knote
           color: $gray
           cursor: pointer
@@ -325,7 +325,7 @@ html
       position: absolute
       bottom: 0
       left: 0
-      z-index: 100
+      z-index: 11
       margin-left: 55px
       &.no-replies
         margin-left: 15px
